--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <script src = "exercicio3.js">
-    </script>
+<head>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src ="exercicio9.js"></script>
 </head>
 <body>
     
